--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "react-select-search": "^3.0.10",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "overrides": {
