--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "hamburger-react": "^2.5.0",
     "rc-slider": "^10.0.0",
     "react": "^18.1.0",
@@ -19,7 +20,8 @@
     "react-select": "^5.4.0",
     "react-select-search": "^3.0.10",
     "swiper": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
