--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "react-select-search": "^3.0.10",
+    "redux": "^4.2.1",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
